cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
find_package(ImageMagick COMPONENTS Magick++)
include_directories(${ImageMagick_INCLUDE_DIRS})
add_executable( DisplayImage DisplayImage.cpp )
target_link_libraries( DisplayImage ${ImageMagick_LIBRARIES})
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
